# iziproxy

./: .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
docs/source/: advanced.rst  api.rst  conf.py  configuration.rst  contributing.rst  examples.rst  index.rst  installation.rst  migration.rst  usage.rst
examples/: .env.example  api_wrapper_integration.py  config_example.yml  custom_config.py  env_credentials.py  monkey_patching.py  ntlm_auth_example.py  simple_usage.py
src/iziproxy/: __init__.py  config_manager.py  env_detector.py  logger.py  ntlm_auth.py  password_manager.py  proxy_detector.py  proxy_manager.py  secure_config.py
tests/: __init__.py  conftest.py  test_config_manager.py  test_config_manager_extended.py  test_edge_cases.py  test_env_detector.py  test_integration.py  test_logger.py  test_ntlm_auth.py  test_proxy_detector.py  test_proxy_manager.py  test_public_api.py  test_secure_config.py
